# aproman

./: AGENTS.md  README.md  aproman  aproman.py  audio-profile-manager  install.sh  lefthook.yaml  package.json  pyproject.toml
.github/workflows/: publish.yml
aproman/: __init__.py  aproman.py
integration-tests/openrc-system/: Dockerfile  test.sh
integration-tests/openrc-user/: Dockerfile  test.sh
integration-tests/shared/: fake-dbus-monitor  fake-pactl
integration-tests/systemd/: Dockerfile  test.sh
openrc-system/: aproman
openrc-user/: aproman
systemd/: aproman.service  audio-profile-manager.service
tests/: test_aproman.py
