[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aproman"
version = "0.1.0"
description = "Fix HDMI audio after suspend/resume on PipeWire + WirePlumber"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
aproman = "aproman:main"

[tool.hatch.build.targets.wheel]
include = ["aproman.py"]
