[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aproman"
version = "0.5.2"
description = "Fix HDMI audio after suspend/resume on PipeWire + WirePlumber"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
aproman = "aproman:main"

[tool.hatch.build.targets.wheel]
packages = ["aproman"]

[tool.hatch.build.targets.wheel.force-include]
"openrc-system/aproman" = "aproman/openrc-system/aproman"
"openrc-user/aproman" = "aproman/openrc-user/aproman"
"systemd/aproman.service" = "aproman/systemd/aproman.service"

[tool.ty.rules]
all = "error"
